# rocketsink

./: Cargo.toml  README.md  Rocket.toml  test_run.sh
benches/: json_benchmark.rs
src/: main.rs
src/sink/: data.rs  db.rs  error.rs  mod.rs  routes.rs
