[package]
name = "eventsink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadpool = "0.9.5"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["deadpool_redis"]
